update: cart regression tree

--- a/MLNotes/决策树.md
+++ b/MLNotes/决策树.md
@@ -36,7 +36,7 @@ $$
 
 
 
-条件熵计算示例：[条件熵计算示例](https://blog.csdn.net/qq_40765537/article/details/114838485)
+附：条件熵计算示例：[条件熵计算示例](https://blog.csdn.net/qq_40765537/article/details/114838485)
 
 
 
@@ -50,6 +50,107 @@ c4.5算法使用信息增益率在进行节点的特征选取。
 $$
 infoGain\_ratio(D, a) = \frac{infoGain(D, a)}{IV(a)}
 $$
+
+
+
+其中：
+$$
+IV(a) = -\sum_{v=1}^V\frac{|D^v|}{|D|}log_2\frac{|D_v|}{|D|}
+$$
+$IV(a)$即特征a的信息熵
+
+
+
+
+
+
+
+### Cart分类树算法
+
+cart分类树算法使用基尼系数来选择特征。基尼系数越小，纯度越高，特征越好。与信息增益（率）相反。cart算法建立起来的树是二叉树，而不是多叉树
+$$
+\begin{aligned}
+Gini(D) &= \sum_{i=1}^{n}p(x_i)(1-p(x_i)) \\
+&= 1 - \sum_{i=1}^np(x_i)^2
+\end{aligned}
+$$
+其中n是分类的数目，$p(x_i)$是分类$x_i$出现的概率。
+
+
+
+在属性A的条件下，样本D的基尼系数定义为：
+$$
+GiniIndex(D|A=a) = \frac{|D_1|}{|D|}Gini(D_1) + \frac{|D_2|}{|D|}Gini(D_2)
+$$
+
+
+分类树建树过程：
+
+1. 如果样本个数少于阈值或者没有特征，则返回决策子树，当前节点停止递归
+2. 计算样本D的基尼系数，如果基尼系数小于阈值，则返回决策子树，当前节点停止递归
+3. 计算当前节点**各个特征**的**各个值**的基尼系数，选择所有特征中最小基尼系数的特征以及其切分值作为当前节点最优特征和最优切分点。
+4. 继续递归处理切分后的$D_1$和$D_2$
+
+
+
+cart分类树建树示例：[cart建树示例](https://zhuanlan.zhihu.com/p/139523931)
+
+
+
+
+
+
+
+### Cart回归树算法
+
+cart回归树使用最小化误差平方和来选择特征。
+$$
+min_{A, a}[min_{c_1}\sum_{x_i \in D_1(A, a)}(y_i-c_1)^2 + min_{c_2}\sum_{x_i \in D_2(A, a)}(y_i-c_2)^2]
+$$
+其中$D_1$和$D_2$代表用特征A=a进行划分后的两个子样本集。
+$c_1$为按照A=a进行划分后$D_1$样本的均值，$c_2$为按照A=a进行划分后$D_2$样本的均值。
+
+$y_i$代表A=a时对应的实际值。
+
+
+
+建树过程：同时寻找特征A和对应的属性值a，使得用A=a进行划分时，所获得的两个子集的所有样本点的平方误差之和最小。误差为每个子集的每个样本点对应的输出值减去当前样本点的输出值
+
+预测值为叶子节点的样本输出点的均值。
+
+
+
+参考：[决策树算法--CART回归树算法](https://zhuanlan.zhihu.com/p/139519852)
+
+建树过程示例：[CART-回归树 实例](https://blog.csdn.net/liuhe2296044/article/details/112723466)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
