--- a/MLNotes/数学.md
+++ b/MLNotes/数学.md
@@ -54,6 +54,18 @@ $$
 
 
 
+对偶问题：任何一个求极大化线性规划问题都有一个极小化线性规划问题与之对应，反之亦然，我们把其中一个问题叫做**原问题**，另一个叫做它的**对偶问题**
+
+KTT条件：
 
 
 
+
+
+
+
+
+
+均方差和交叉熵损失函数对比：
+
+https://zhuanlan.zhihu.com/p/70804197
